Added a mailto link to the email

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>Contact Info</h2>
 
     <ul>
-        <li>Email: enid.soto@gmail.com</li>
+        <li>Email: <a href="mailto:enid.soto@gmail.com">enid.soto@gmail.com</a></li>
         <li>GitHub: enma1009</li>
         <li>Portfolio: <a href="https://www.behance.net/enidsoto" target="_blank">Enid's Behance</a></li>
     </ul>
