Added content to index

--- a/index.html
+++ b/index.html
@@ -2,22 +2,29 @@
 <html lang="en">
 <head>
     <title>Enid's Student Bio</title>
+    <link rel="stylesheet" type="text/css" href="assets/main.css">
 </head>
 <body>
-    <h1>Student Bio</h1>
+    <header>
+        <h1>Student Bio</h1>
+    </header>
 
-    <h2>Enid Soto</h2>
+    <div class="container">
 
-    <img src="assets/enidsoto.png" alt="Elephant illustration" width="200">
+        <section class="personal-info">
+            <h2>Enid Soto</h2>
+            <img src="assets/enidsoto.png" alt="Elephant illustration" width="200">
+            <p>My name is Enid Soto. I am a graphic designer, amateur illustrator and aspiring full stack web developer. I like cats and dark chocolate among many other things.</p>
+        </section>
 
-    <p>My name is Enid Soto. I am a graphic designer, amateur illustrator and aspiring full stack web developer. I like cats and dark chocolate among many other things.</p>
-
-    <h2>Contact Info</h2>
-
-    <ul>
-        <li>Email: <a href="mailto:enid.soto@gmail.com">enid.soto@gmail.com</a></li>
-        <li>GitHub: enma1009</li>
-        <li>Portfolio: <a href="https://www.behance.net/enidsoto" target="_blank">Enid's Behance</a></li>
-    </ul>
+        <section class="contact">
+            <h2>Contact Info</h2>
+            <ul>
+                <li>Email: <a href="mailto:enid.soto@gmail.com">enid.soto@gmail.com</a></li>
+                <li>GitHub: enma1009</li>
+                <li>Portfolio: <a href="https://www.behance.net/enidsoto" target="_blank">Enid's Behance</a></li>
+            </ul>   
+        </section>
+    </div>
 </body>
 </html>
